# Zetaris

./: .env.example  .eslintrc.json  .gitignore  App.tsx  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_ISSUES.md  LICENSE  README.md  STATUS.md  app.json  index.ts  package-lock.json  package.json  powersOfTau28_hez_final_16.ptau  tsconfig.json
.github/workflows/: ci-cd.yml
assets/contracts/: README.md  package.json
circuits/: README.md  balance_threshold.circom  input.json  package-lock.json  package.json  proof.json  public.json
circuits/circom/: confidential_transfer.circom  nullifier.circom  private_swap.circom  range_proof.circom
crates/core/: Cargo.toml
crates/core/src/: commitments.rs  key_manager.rs  lib.rs
crates/core/src/crypto/: primitives.rs
crates/ffi/: Cargo.toml  build.rs
crates/ffi/src/: lib.rs  meshcrypt.udl
docs/: DEPLOYMENT.md  PHASE2_PROGRESS.md  SECURITY-AUDIT.md  SECURITY-MODEL.md  USER-GUIDE.md  ZK_SNARKS.md
examples/: demo.ts  test_real_wallet.ts
infra/docker/: docker-compose.yml
infra/scripts/: compile-circuits.sh  deploy.sh
scripts/: compile-circuits.sh
sdk/ts-sdk/: README.md  package.json
services/bridge-watcher-go/: .env.example  README.md  go.mod  main.go
src/: index.ts  main.ts  wallet.ts
src/address/: resolver.ts
src/analytics/: HomomorphicAnalytics.ts
src/api/: server.ts
src/blockchain/: MinaService.ts  NEARService.ts  RealBlockchainService.ts  SolanaIntegration.ts  SolanaService.ts  StarknetService.ts  ZcashIntegrationTest.ts  ZcashLightwalletService.ts  ethereum.ts  zcash.ts
src/bridge/: BridgeRelay.ts  BridgeService.ts  BridgeWatcher.ts  CrossChainBridge.ts  CrossChainPrivacyBridge.ts  ZecPortBridgeService.ts
src/components/: BottomTabBar.tsx  ChainIcon.tsx  DashboardCard.tsx  Header.tsx  LoadingOverlay.tsx  PriceChart.tsx  PrivacyScoreBreakdown.tsx  StealthAddressCard.tsx  TransactionHistoryCard.tsx  ValidatedInput.tsx
src/core/: ZetarisWalletCore.ts  ZkError.ts  keyManager.ts  realKeyManager.ts
src/crypto/: BulletproofsService.ts  Halo2ProofSystem.ts  MPCKeySharding.ts  primitives.ts  zksnark.ts
src/design/: colors.ts
src/fusion/: CrossChainFusion.ts  FusionPlusClient.ts
src/mesh/: BLEMeshService.ts  MeshNetwork.ts  MeshNetworkProtocol.ts  MeshPeer.ts  MeshRouter.ts  OfflineSync.ts  OnionRouter.ts  network.ts
src/navigation/: AppNavigator.tsx
src/nfc/: NFCProtocol.ts  NFCService.ts  NFCTransferProtocol.ts  handler.ts
src/privacy/: ComprehensiveZKProofService.ts  DecoyTransactionGraph.ts  PrivacyMixer.ts  RingSignatures.ts  StealthAddress.ts  ZKProofIntegration.ts  ZKProofService.ts  ZcashLightClient.ts  ZcashSaplingWallet.ts  ZcashShieldedService.ts  transactions.ts  zkProofService.ts
src/screens/: BackupWalletScreen.tsx  BridgeScreen.tsx  BrowserScreen.tsx  CalculatorModeScreen.tsx  CreateWalletScreen.tsx  CrossChainBridgeScreen.tsx  EnhancedWalletScreen.tsx  ImportPrivateKeyScreen.tsx  ImportWalletScreen.tsx  LockScreen.tsx  WalletScreen.tsx  (+15 more)
tests/: README.md  integration.test.js  setup.ts  test_bip39.js  test_bulletproofs.js  test_confidential_tx.js  test_crypto_primitives.js  test_real_zk_proof.ts  test_wallet_works.js
(+44 files in other folders)
