[workspace]
members = [
    "crates/core",
    "crates/meshnet",
    "crates/nfc",
    "crates/zk",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Kartik Vyas <kartikvyas1604@gmail.com>"]

[workspace.dependencies]
# Cryptography
curve25519-dalek = { version = "4.1", features = ["serde"] }
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
blake2 = "0.10"
sha2 = "0.10"
argon2 = "0.5"

# BIP standards
bip39 = "2.0"
bitcoin = { version = "0.31", features = ["serde"] }
tiny-bip39 = "1.0"

# Zero-knowledge proofs
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
bulletproofs = "4.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Networking
libp2p = { version = "0.53", features = ["tcp", "mdns", "gossipsub", "noise", "yamux"] }

# Storage
rusqlite = { version = "0.30", features = ["bundled"] }
sqlcipher = "0.34"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
