[package]
name = "SafeMask-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
curve25519-dalek.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
blake2.workspace = true
sha2.workspace = true
argon2.workspace = true
bip39.workspace = true
bitcoin.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite.workspace = true

# Specific dependencies
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"
bs58 = "0.5"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# BIP32/44 HD wallet
hdwallet = "0.4"
secp256k1 = { version = "0.28", features = ["global-context", "rand-std"] }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile = "3.8"
hex = "0.4"

# [[bench]]
# name = "commitments"
# harness = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["std"]
std = []
