[package]
name = "SafeMask-ffi"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "SafeMask_ffi"

[dependencies]
SafeMask-core = { path = "../core" }
uniffi = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
